Fix: Extra margin-top on nested ordered and unordered lists

--- a/markdownpad-github.css
+++ b/markdownpad-github.css
@@ -113,7 +113,12 @@ ul, ol {
   padding-left: 30px;
 }
 
-ul li>:first-child, ol li>:first-child {
+ul li > :first-child, 
+ol li > :first-child, 
+ul li ul:first-of-type, 
+ol li ol:first-of-type, 
+ul li ol:first-of-type, 
+ol li ul:first-of-type {
   margin-top: 0px;
 }
 
